correccion width 40% #musica  + &nbsp agregado

--- a/index.html
+++ b/index.html
@@ -120,8 +120,7 @@
           <div class="divisor-texto">
             <h2>Adultos/Niños</h2>
             <p>
-              Nuestros programas están diseñados para
-              <em>todas las edades y niveles.</em>
+              Nuestros programas están diseñados para <em>todas las&nbsp;edades y&nbsp;niveles.</em>
             </p>
           </div>
         </div>
@@ -148,7 +147,7 @@
           <p>
             Nuestro equipo de docentes está formado por
             <strong>músicos profesionales</strong>
-            comprometidos a ayudarte a alcanzar tus metas.
+            comprometidos a ayudarte a alcanzar tus&nbsp;metas.
           </p>
         </div>
         <div class="divisor2 container max-width-xxl">
@@ -167,7 +166,7 @@
                     <p class="card-text">Con años de experiencia y un amor inquebrantable por la música, guía a sus
                       estudiantes desde los primeros acordes hasta las
                       melodías más complejas, inspirando el talento de cada alumno, cultivando una conexión única
-                      entre el pianista y su instrumento.</p>
+                      entre el&nbsp;pianista y su&nbsp;instrumento.</p>
                   </div>
                 </div>
               </div>
