--- a/pages/piano.html
+++ b/pages/piano.html
@@ -102,8 +102,7 @@
       <section class="section1">
         <h1 class="fade-in fade1">Aprende<br>Piano</h1>
         <p class="fade-in fade2">
-          Nuestras clases son <em>adaptadas e individuales</em>, garantizando mayor atención
-          y progreso.
+          Nuestras clases son <em>adaptadas e individuales</em>, garantizando mayor atención y&nbsp;progreso.
         </p>
         <div class="imagen1">
           <img src="../assets/img/piano/1.webp" alt="teclas de piano" class="fade-in fade3" width="600" height="400">
@@ -112,7 +111,7 @@
       <section class="section2 fade-in">
         <h2>Adultos<br>Niños</h2>
         <p>
-          Apto para todas las edades y niveles.<br>Anímate y reserva tu clase para conocernos.
+          Apto para todas las edades y niveles.<br>Anímate y reserva tu clase para&nbsp;conocernos.
         </p>
         <div class="imagen2">
           <img src="../assets/img/piano/2.webp" alt="adultos y niños tocando piano" width="501" height="500">
@@ -121,7 +120,7 @@
       <section class="section3 fade-in">
         <h3>Únete<br>a<br>nosotros</h3>
         <p>
-          Muchos músicos alrededor del mundo <em>iniciaron su camino con nosotros</em>
+          Muchos músicos alrededor del mundo <em>iniciaron su camino con&nbsp;nosotros</em>
         </p>
         <div class="imagen3">
           <img src="../assets/img/piano/3.webp" alt="pianista global" loading="lazy" width="501" height="500">
