--- a/pages/violin.html
+++ b/pages/violin.html
@@ -108,22 +108,22 @@
           <img src="../assets/img/violin/1.webp" alt="imagen de violín" class="fade-in fade3" width="600" height="400">
         </div>
       </section>
-      <section class="section2 fade-in">
-        <h2>Adultos<br>Niños</h2>
-        <p>
+      <section class="section2">
+        <h2 class="fade-in fade1">Adultos<br>Niños</h2>
+        <p class="fade-in fade2">
           Apto para todas las edades y niveles.<br>Anímate y reserva tu clase para&nbsp;conocernos.
         </p>
         <div class="imagen2">
-          <img src="../assets/img/violin/2.webp" alt="adultos y niños tocando violín" width="501" height="500">
+          <img src="../assets/img/violin/2.webp" alt="adultos y niños tocando violín" class="fade-in fade3" width="501" height="500">
         </div>
       </section>
-      <section class="section3 fade-in">
-        <h3>Únete<br>a<br>nosotros</h3>
-        <p>
+      <section class="section3">
+        <h3 class="fade-in fade1">Únete<br>a<br>nosotros</h3>
+        <p class="fade-in fade2">
           Muchos músicos alrededor del mundo <em>iniciaron su camino con&nbsp;nosotros</em>
         </p>
         <div class="imagen2">
-          <img src="../assets/img/violin/3.webp" alt="violinista global" loading="lazy" width="501" height="500">
+          <img src="../assets/img/violin/3.webp" alt="violinista global" loading="lazy" class="fade-in fade3" width="501" height="500">
         </div>
       </section>
 
