--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
               <div class="card">
                 <div class="row">
                   <div class="col-lg-12 col-sm-6 d-flex align-items-center justify-content-center pt-3">
-                    <a href="pages/piano.html" class="link" aria-label="Abrir enlace a piano">Piano Elena Martínez</a>
+                    <a href="pages/piano.html" class="link" aria-label="Abrir enlace a piano">PIANO</a>
                   </div>
                   <div class="col-lg-12 col-sm-6">
                     <img class="card-img-top mb-3" src="assets/img/profesores/s1.webp"
@@ -175,7 +175,7 @@
               <div class="card">
                 <div class="row">
                   <div class="col-lg-12 col-sm-6 d-flex align-items-center justify-content-center pt-3">
-                   <a href="pages/canto.html" class="link" aria-label="Abrir enlace a canto">Canto Laura Rivarola</a>
+                   <a href="pages/canto.html" class="link" aria-label="Abrir enlace a canto">CANTO</a>
                   </div>
                   <div class="col-lg-12 col-sm-6">
                     <img class="card-img-top mb-3" src="assets/img/profesores/s2.webp"
@@ -194,7 +194,7 @@
               <div class="card">
                 <div class="row">
                   <div class="col-lg-12 col-sm-6 d-flex align-items-center justify-content-center pt-3">
-                    <a href="pages/violin.html" class="link" aria-label="Abrir enlace a violín">Violín Analía Villalba</a>
+                    <a href="pages/violin.html" class="link" aria-label="Abrir enlace a violín">VIOLIN</a>
                   </div>
                   <div class="col-lg-12 col-sm-6">
                     <img class="card-img-top mb-3" src="assets/img/profesores/s3.webp"
