agregado hover index profesores con cambio de texto = actualizacion importante

--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
                 <div class="row">
                   <div class="col-lg-12 col-sm-6 d-flex align-items-center justify-content-center pt-3">
                     <a href="pages/piano.html" class="link" aria-label="Abrir enlace a piano">PIANO</a>
+                    <a href="pages/piano.html" class="link active" aria-label="Abrir enlace a canto">Ver más</a>
                   </div>
                   <div class="col-lg-12 col-sm-6">
                     <img class="card-img-top mb-3" src="assets/img/profesores/s1.webp"
@@ -176,6 +177,7 @@
                 <div class="row">
                   <div class="col-lg-12 col-sm-6 d-flex align-items-center justify-content-center pt-3">
                    <a href="pages/canto.html" class="link" aria-label="Abrir enlace a canto">CANTO</a>
+                   <a href="pages/canto.html" class="link active" aria-label="Abrir enlace a canto">Ver más</a>
                   </div>
                   <div class="col-lg-12 col-sm-6">
                     <img class="card-img-top mb-3" src="assets/img/profesores/s2.webp"
@@ -195,6 +197,7 @@
                 <div class="row">
                   <div class="col-lg-12 col-sm-6 d-flex align-items-center justify-content-center pt-3">
                     <a href="pages/violin.html" class="link" aria-label="Abrir enlace a violín">VIOLIN</a>
+                    <a href="pages/violin.html" class="link active" aria-label="Abrir enlace a canto">Ver más</a>
                   </div>
                   <div class="col-lg-12 col-sm-6">
                     <img class="card-img-top mb-3" src="assets/img/profesores/s3.webp"
