--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
               <div class="card">
                 <div class="row">
                   <div class="col-lg-12 col-sm-6 d-flex align-items-center justify-content-center pt-3">
-                    <a href="pages/piano.html" class="link" aria-label="Abrir enlace a piano">PIANO</a>
+                    <a href="pages/piano.html" class="link background" aria-label="Abrir enlace a piano">PIANO</a>
                     <a href="pages/piano.html" class="link active" aria-label="Abrir enlace a canto">Ver más</a>
                   </div>
                   <div class="col-lg-12 col-sm-6">
@@ -176,7 +176,7 @@
               <div class="card">
                 <div class="row">
                   <div class="col-lg-12 col-sm-6 d-flex align-items-center justify-content-center pt-3">
-                   <a href="pages/canto.html" class="link" aria-label="Abrir enlace a canto">CANTO</a>
+                   <a href="pages/canto.html" class="link background" aria-label="Abrir enlace a canto">CANTO</a>
                    <a href="pages/canto.html" class="link active" aria-label="Abrir enlace a canto">Ver más</a>
                   </div>
                   <div class="col-lg-12 col-sm-6">
@@ -196,7 +196,7 @@
               <div class="card">
                 <div class="row">
                   <div class="col-lg-12 col-sm-6 d-flex align-items-center justify-content-center pt-3">
-                    <a href="pages/violin.html" class="link" aria-label="Abrir enlace a violín">VIOLIN</a>
+                    <a href="pages/violin.html" class="link background" aria-label="Abrir enlace a violín">VIOLIN</a>
                     <a href="pages/violin.html" class="link active" aria-label="Abrir enlace a canto">Ver más</a>
                   </div>
                   <div class="col-lg-12 col-sm-6">
