--- a/pages/canto.html
+++ b/pages/canto.html
@@ -15,10 +15,12 @@
   <link rel="preload" href="../css/styles.css" as="style">
   <!-- PRELOAD DE FUENTES -->
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500&display=swap" as="style">
- <!-- PRELOAD DE IMAGENES TOP-SECTION -->
+ 
+  <!-- PRELOAD DE IMAGENES -->
   <link rel="preload" href="../assets/img/top-section/top1.webp" as="image">
   <link rel="preload" href="../assets/img/top-section/top2.webp" as="image">
   <link rel="preload" href="../assets/img/top-section/top3.webp" as="image">
+  <link rel="preload" href="assets/img/background/4.webp" as="image">
   
   <!-- ENLACE A BOOTSTRAP Y ESTILOS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -172,8 +174,6 @@
     crossorigin="anonymous"></script>
   <!-- SCRIPTS JS -->
   <script src="../assets/js/toogle.js"></script>
-  <script src="../assets/js/cookies.js"></script>
-  <script src="../assets/js/lazyload.js"></script>
   <!-- FIN BODY -->
 </body>
 
