--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -20,6 +20,9 @@
   <!-- ENLACE A BOOTSTRAP Y ESTILOS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/styles.css">
+
+   <!-- PRELOAD DE IMAGENES -->
+  <link rel="preload" href="assets/img/background/2.webp" as="image">
   
   <!-- TITULO DEL SITIO WEB -->
   <title>MusicArte - Escuela de Música en Caballito, Buenos Aires</title>
@@ -201,8 +204,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <!-- SCRIPTS JS -->
   <script src="../assets/js/toogle.js"></script>
-  <script src="../assets/js/cookies.js"></script>
-  <script src="../assets/js/lazyload.js"></script>
   <!-- FIN BODY -->
 </body>
 
