--- a/pages/violin.html
+++ b/pages/violin.html
@@ -11,8 +11,6 @@
   
   <!-- PRELOAD DE BOOTSTRAP -->
   <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" as="style" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <!-- PRELOAD DE ESTILOS -->
-  <link rel="preload" href="../css/styles.css" as="style">
   <!-- PRELOAD DE FUENTES -->
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500&display=swap" as="style">
   
@@ -141,7 +139,11 @@
         </div>
       </section>
     </div>
-
+        	<!-- BACK TO TOP BUTTON -->
+          <a href="#" class="back-to-top">
+            <span class="material-icons">
+            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 30" fill="none" stroke="#f4f4f4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 19V6M5 12l7-7 7 7"/></svg></span>
+          </a>
       <!-- FIN MAIN PRINCIPAL -->
     </main>
 
@@ -173,6 +175,7 @@
     crossorigin="anonymous"></script>
   <!-- SCRIPTS JS -->
   <script src="../assets/js/toogle.js"></script>
+  <script src="../assets/js/back-to-top.js"></script>
   <!-- FIN BODY -->
 </body>
 
