agregado aria-label a back-to-top segun recomendacion google insights

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       </section>
     </div>
         	<!-- BACK TO TOP BUTTON -->
-	<a href="#" class="back-to-top">
+	<a href="#" class="back-to-top" aria-label="Volver al top de la web">
 		<span class="material-icons">
     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 30" fill="none" stroke="#f4f4f4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 19V6M5 12l7-7 7 7"/></svg></span>
 	</a>
