--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
               <div class="card">
                 <div class="row">
                   <div class="col-lg-12 col-sm-6 d-flex align-items-center justify-content-center pt-3">
-                    <a href="pages/piano.html" class="link background" aria-label="Abrir enlace a piano">PIANO</a>
-                    <a href="pages/piano.html" class="link active" aria-label="Abrir enlace a canto">Ver más</a>
+                    <span class="link background">PIANO</span>
+                    <a href="pages/piano.html" class="link active" aria-label="Abrir enlace a canto">VER</a>
                   </div>
                   <div class="col-lg-12 col-sm-6">
                     <img class="card-img-top mb-3" src="assets/img/profesores/s1.webp"
@@ -175,8 +175,8 @@
               <div class="card">
                 <div class="row">
                   <div class="col-lg-12 col-sm-6 d-flex align-items-center justify-content-center pt-3">
-                   <a href="pages/canto.html" class="link background" aria-label="Abrir enlace a canto">CANTO</a>
-                   <a href="pages/canto.html" class="link active" aria-label="Abrir enlace a canto">Ver más</a>
+                    <span class="link background">CANTO</span>
+                   <a href="pages/canto.html" class="link active" aria-label="Abrir enlace a canto">VER</a>
                   </div>
                   <div class="col-lg-12 col-sm-6">
                     <img class="card-img-top mb-3" src="assets/img/profesores/s2.webp"
@@ -195,8 +195,8 @@
               <div class="card">
                 <div class="row">
                   <div class="col-lg-12 col-sm-6 d-flex align-items-center justify-content-center pt-3">
-                    <a href="pages/violin.html" class="link background" aria-label="Abrir enlace a violín">VIOLIN</a>
-                    <a href="pages/violin.html" class="link active" aria-label="Abrir enlace a canto">Ver más</a>
+                    <span class="link background">VIOLIN</span>
+                    <a href="pages/violin.html" class="link active" aria-label="Abrir enlace a canto">VER</a>
                   </div>
                   <div class="col-lg-12 col-sm-6">
                     <img class="card-img-top mb-3" src="assets/img/profesores/s3.webp"
