ajustes de padding a los elementos para mayor espacio

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="divisor">
           <div class="divisor-imagen">
             <img src="assets/img/index/j2.webp" alt="madre e hijo practicando violin" loading="lazy" height="500">
-            <img src="assets/img/index/j3.webp" alt="niña practicando piano" loading="lazy" height="500">
+            <img src="assets/img/index/j3.webp" alt="niña practicando piano" loading="lazy" height="500" class="segunda-imagen">
           </div>
           <div class="divisor-texto">
             <h2>Adultos/Niños</h2>
@@ -126,7 +126,7 @@
         <div class="divisor">
           <div class="divisor-imagen">
             <img src="assets/img/index/i2.webp" alt="padre e hija practicando canto" loading="lazy" height="500">
-            <img src="assets/img/index/i3.webp" alt="padre e hijo practicando piano" loading="lazy" height="500">
+            <img src="assets/img/index/i3.webp" alt="padre e hijo practicando piano" loading="lazy" height="500" class="segunda-imagen">
           </div>
           <div class="divisor-texto">
             <h2>Instrumentos</h2>
