--- a/pages/piano.html
+++ b/pages/piano.html
@@ -17,7 +17,6 @@
   <!-- PRELOAD DE IMAGENES -->
   <link rel="preload" href="../assets/img/top-section/top1.webp" as="image">
   <link rel="preload" href="../assets/img/top-section/top2.webp" as="image">
-  <link rel="preload" href="../assets/img/top-section/top3.webp" as="image"> 
   
   <!-- ENLACE A BOOTSTRAP Y ESTILOS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -80,7 +79,7 @@
             <img src="../assets/img/top-section/top2.webp" class="d-block w-100" alt="imagen artística de las teclas de un piano" width="1200" height="800">
           </div>
           <div class="carousel-item">
-            <img src="../assets/img/top-section/top3.webp" class="d-block w-100" alt="imagen artística de dos micrófonos apoyados en el suelo" width="1200" height="800">
+            <img src="../assets/img/top-section/top3.webp" class="d-block w-100" alt="imagen artística de dos micrófonos apoyados en el suelo" width="1200" height="800" loading="lazy">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
