actualizo quito preload a background

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500&display=swap" as="style">
  
   <!-- PRELOAD DE IMAGENES  -->
-  <link rel="preload" href="assets/img/background/1.webp" as="image">
   <link rel="preload" href="assets/img/top-section/top1.webp" as="image">
   <link rel="preload" href="assets/img/top-section/top2.webp" as="image">
   
@@ -113,8 +112,8 @@
       <section class="section2 fade-in">
         <div class="divisor">
           <div class="divisor-imagen">
-            <img src="assets/img/index/j2.webp" alt="madre e hijo practicando violin" loading="lazy" height="500">
-            <img src="assets/img/index/j3.webp" alt="niña practicando piano" loading="lazy" height="500" class="segunda-imagen">
+            <img src="assets/img/index/j2.webp" alt="madre e hijo practicando violin" height="500">
+            <img src="assets/img/index/j3.webp" alt="niña practicando piano" height="500" class="segunda-imagen">
           </div>
           <div class="divisor-texto">
             <h2>Adultos/Niños</h2>
@@ -125,8 +124,8 @@
         </div>
         <div class="divisor">
           <div class="divisor-imagen">
-            <img src="assets/img/index/i2.webp" alt="padre e hija practicando canto" loading="lazy" height="500">
-            <img src="assets/img/index/i3.webp" alt="padre e hijo practicando piano" loading="lazy" height="500" class="segunda-imagen">
+            <img src="assets/img/index/i2.webp" alt="padre e hija practicando canto" height="500">
+            <img src="assets/img/index/i3.webp" alt="padre e hijo practicando piano" height="500" class="segunda-imagen">
           </div>
           <div class="divisor-texto">
             <h2>Instrumentos</h2>
