--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <nav class="navbar navbar-expand-lg fixed-top py-0" data-bs-theme="dark">
       <div class="container-fluid">
         <a class="navbar-brand logo" href="#" aria-label="Abrir enlace a inicio">MusicArte</a>
-        <label class="navbar-brand logo-2"><a href="#" aria-label="Abrir enlace a inicio">♪</a></label>
+        <label class="navbar-brand logo-2"><a href="#" aria-label="Abrir enlace a inicio">Music</a></label>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <svg xmlns="http://www.w3.org/2000/svg" width="2.2rem" height="2.2rem" viewBox="0 0 20 20"><path fill="currentColor" fill-rule="evenodd" d="M3 5a1 1 0 0 1 1-1h12a1 1 0 1 1 0 2H4a1 1 0 0 1-1-1m0 5a1 1 0 0 1 1-1h12a1 1 0 1 1 0 2H4a1 1 0 0 1-1-1m0 5a1 1 0 0 1 1-1h12a1 1 0 1 1 0 2H4a1 1 0 0 1-1-1" clip-rule="evenodd"/></svg>
