meta description diferenciado por html

--- a/pages/canto.html
+++ b/pages/canto.html
@@ -27,7 +27,7 @@
   <title>MusicArte - Escuela de Música en Caballito, Buenos Aires</title>
   
   <!-- DESCRIPCION DEL SITIO WEB -->
-  <meta name="description" content="MusicArte - Escuela de Música en Caballito, Buenos Aires. Clases de piano, canto y violín para todas las edades y niveles impartidas por profesionales.">
+  <meta name="description" content="Descripción de la modalidad de la clases que canto.">
   <meta name="keywords" content="MusicArte, escuela de música, Caballito, Buenos Aires, piano, canto, violín, clases, profesionales, música, niños, adultos, enseñanza, profesores calificados">
   <!-- FIN METADATOS -->
 </head>
