--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="../css/styles.css">
   
   <!-- TITULO DEL SITIO WEB -->
-  <title>MusicArte - Escuela de Música en Caballito, Buenos Aires</title>
+  <title>MusicArte - Contacto</title>
   
   <!-- DESCRIPCION DEL SITIO WEB -->
   <meta name="description" content="Formulario de contacto para reservar una clase.">
