--- a/pages/piano.html
+++ b/pages/piano.html
@@ -24,7 +24,7 @@
   <link rel="preload" href="../assets/img/top-section/top2.webp" as="image">
   
   <!-- TITULO DEL SITIO WEB -->
-  <title>MusicArte - Escuela de Música en Caballito, Buenos Aires</title>
+  <title>MusicArte - Piano</title>
   
   <!-- DESCRIPCION DEL SITIO WEB -->
   <meta name="description" content="Descripción de la modalidad de la clases que piano.">
