--- a/pages/piano.html
+++ b/pages/piano.html
@@ -29,6 +29,7 @@
   <!-- DESCRIPCION DEL SITIO WEB -->
   <meta name="description" content="Descripción de la modalidad de la clases que piano.">
   <meta name="keywords" content="MusicArte, escuela de música, Caballito, Buenos Aires, piano, canto, violín, clases, profesionales, música, niños, adultos, enseñanza, profesores calificados">
+  <meta name="author" content="Tomás Stabilini" />
   <!-- FIN METADATOS -->
 </head>
 
