agrego nombre  de profesores en index section3 al hacer hover con opacidad de fondo

--- a/index.html
+++ b/index.html
@@ -159,9 +159,10 @@
                     <span class="link background">PIANO</span>
                     <a href="pages/piano.html" class="link active" aria-label="Abrir enlace a canto">VER</a>
                   </div>
-                  <div class="col-lg-12 col-sm-6">
+                  <div class="overlay col-lg-12 col-sm-6">
                     <img class="card-img-top mb-3" src="assets/img/profesores/s1.webp"
                       alt="Card image cap profesora de piano" loading="lazy" width="432">
+                        <p class="name">Laura Torres</p>
                   </div>
                   <div class="col-lg-12 col-sm-12 mb-3">
                     <p class="card-text">Con años de experiencia y un amor inquebrantable por la música, guía a sus
@@ -179,9 +180,10 @@
                     <span class="link background">CANTO</span>
                    <a href="pages/canto.html" class="link active" aria-label="Abrir enlace a canto">VER</a>
                   </div>
-                  <div class="col-lg-12 col-sm-6">
+                  <div class="overlay col-lg-12 col-sm-6">
                     <img class="card-img-top mb-3" src="assets/img/profesores/s2.webp"
                       alt="Card image cap profesora de violin" loading="lazy" width="432">
+                      <p class="name">Andrea Veliz</p>
                   </div>
                   <div class="col-lg-12 col-sm-12 mb-3">
                     <p class="card-text">Con su calidez y experiencia, ayuda a sus estudiantes a descubrir todo
@@ -199,9 +201,10 @@
                     <span class="link background">VIOLIN</span>
                     <a href="pages/violin.html" class="link active" aria-label="Abrir enlace a canto">VER</a>
                   </div>
-                  <div class="col-lg-12 col-sm-6">
+                  <div class="overlay col-lg-12 col-sm-6">
                     <img class="card-img-top mb-3" src="assets/img/profesores/s3.webp"
                       alt="Card image cap profesora de canto" loading="lazy" width="432">
+                      <p class="name">Sandra Kruwiz</p>
                   </div>
                   <div class="col-lg-12 col-sm-12 mb-3">
                     <p class="card-text">Con su gracia y amabilidad, despierta la pasión por la música en sus
