quito  /  en etiqueta author en head (recomendacion w3c)

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -25,7 +25,7 @@
   <!-- DESCRIPCION DEL SITIO WEB -->
   <meta name="description" content="Formulario de contacto para reservar una clase.">
   <meta name="keywords" content="MusicArte, escuela de música, Caballito, Buenos Aires, piano, canto, violín, clases, profesionales, música, niños, adultos, enseñanza, profesores calificados">
-  <meta name="author" content="Tomás Stabilini" />
+  <meta name="author" content="Tomás Stabilini">
   <!-- FIN METADATOS -->
 </head>
 
