--- a/pages/violin.html
+++ b/pages/violin.html
@@ -29,7 +29,7 @@
   <!-- DESCRIPCION DEL SITIO WEB -->
   <meta name="description" content="Descripción de la modalidad de la clases que violín">
   <meta name="keywords" content="MusicArte, escuela de música, Caballito, Buenos Aires, piano, canto, violín, clases, profesionales, música, niños, adultos, enseñanza, profesores calificados">
-  <meta name="author" content="Tomás Stabilini" />
+  <meta name="author" content="Tomás Stabilini">
   <!-- FIN METADATOS -->
 </head>
 
