agregado nombre profesores al hacer hover en sus img en todas las paginas

--- a/pages/piano.html
+++ b/pages/piano.html
@@ -135,8 +135,9 @@
         <h3>
           Te estamos esperando.<br><em>Toma tu primera clase.</em>
         </h3>
-        <div class="imagen3">
+        <div class="overlay imagen3">
         <img src="../assets/img/profesores/s1.webp" alt="profesora de piano" loading="lazy" width="432">
+        <p class="name">Laura Torres</p>
         </div>
       </section>
     </div>
