--- a/pages/canto.html
+++ b/pages/canto.html
@@ -135,8 +135,9 @@
           <h3>
             Te estamos esperando.<br><em>Toma tu primera clase.</em>
           </h3>
-          <div class="imagen3">
+          <div class="overlay imagen3">
           <img src="../assets/img/profesores/s2.webp" alt="profesora de canto" loading="lazy" width="432">
+          <p class="name">Andrea Veliz</p>
           </div>
         </section>
       </div>
