--- a/pages/violin.html
+++ b/pages/violin.html
@@ -135,8 +135,9 @@
         <h3>
           Te estamos esperando.<br><em>Toma tu primera clase.</em>
         </h3>
-        <div class="imagen3">
+        <div class="overlay imagen3">
         <img src="../assets/img/profesores/s3.webp" alt="profesora de violín" loading="lazy" width="432">
+        <p class="name">Sandra Kruwiz</p>
         </div>
       </section>
     </div>
