actualizados textos para cada instrumento

--- a/pages/canto.html
+++ b/pages/canto.html
@@ -102,7 +102,7 @@
         <section class="section1">
           <h1 class="fade-in fade1">Aprende<br>Canto</h1>
           <p class="fade-in fade2">
-            Nuestras clases son <em>adaptadas e individuales</em>, garantizando mayor atención y&nbsp;progreso.
+            Nuestras lecciones de canto son personalizadas y únicas, asegurando un aprendizaje efectivo y agradable. Nos enfocamos en la técnica vocal, ayudándote a desarrollar una voz poderosa y controlada. Adaptamos cada lección a las necesidades específicas del alumno.
           </p>
           <div class="imagen1">
             <img src="../assets/img/canto/1.webp" alt="imagen de cantante" class="fade-in fade3" width="600" height="400">
@@ -111,7 +111,7 @@
         <section class="section2">
           <h2 class="fade-in fade1">Adultos<br>Niños</h2>
           <p class="fade-in fade2">
-            Apto para todas las edades y niveles.<br>Anímate y reserva tu clase para&nbsp;conocernos.
+            Perfecto para todas las edades y niveles, desde niños hasta adultos. No importa si eres un principiante o un cantante experimentado, nuestras clases te ayudarán a mejorar tu técnica vocal y habilidades, permitiéndote alcanzar tu máximo potencial.
           </p>
           <div class="imagen2">
             <img src="../assets/img/canto/2.webp" alt="adultos y niños cantando" class="fade-in fade3" width="501" height="500">
@@ -120,7 +120,7 @@
         <section class="section3">
           <h3 class="fade-in fade1">Únete<br>a<br>nosotros</h3>
           <p class="fade-in fade2">
-            Muchos músicos alrededor del mundo <em>iniciaron su camino con&nbsp;nosotros</em>
+            Muchos cantantes internacionales iniciaron su carrera con nosotros. Únete a nuestra comunidad de vocalistas y comienza tu aventura en el mundo del canto. ¡Estamos emocionados de ayudarte a desarrollar tu talento vocal!
           </p>
           <div class="imagen3">
             <img src="../assets/img/canto/3.webp" alt="cantante global" loading="lazy" class="fade-in fade3" width="501" height="500">
@@ -137,7 +137,7 @@
           </h3>
           <div class="overlay imagen3">
           <img src="../assets/img/profesores/s2.webp" alt="profesora de canto" loading="lazy" width="432">
-          <p class="name">Andrea Veliz</p>
+          <p class="name">Profesora<br>Andrea Veliz</p>
           </div>
         </section>
       </div>
