--- a/pages/violin.html
+++ b/pages/violin.html
@@ -102,7 +102,7 @@
       <section class="section1">
         <h1 class="fade-in fade1">Aprende<br>Violín</h1>
         <p class="fade-in fade2">
-          Nuestras clases son <em>adaptadas e individuales</em>, garantizando mayor atención y&nbsp;progreso.
+          Nuestras clases de violín son personalizadas y diseñadas para ofrecer una enseñanza dedicada y efectiva. Cada lección se adapta a las necesidades y objetivos específicos del estudiante, garantizando un aprendizaje óptimo aplicando técnica en el uso del arco y el instrumento.
         </p>
         <div class="imagen1">
           <img src="../assets/img/violin/1.webp" alt="imagen de violín" class="fade-in fade3" width="600" height="400">
@@ -111,7 +111,7 @@
       <section class="section2">
         <h2 class="fade-in fade1">Adultos<br>Niños</h2>
         <p class="fade-in fade2">
-          Apto para todas las edades y niveles.<br>Anímate y reserva tu clase para&nbsp;conocernos.
+          Ideal para todas las edades y niveles, desde niños pequeños hasta adultos mayores. No importa si eres un principiante absoluto o un violinista avanzado, nuestras clases te enseñarán desde la técnica básica hasta las más avanzadas para perfeccionar tus habilidades.
         </p>
         <div class="imagen2">
           <img src="../assets/img/violin/2.webp" alt="adultos y niños tocando violín" class="fade-in fade3" width="501" height="500">
@@ -120,7 +120,7 @@
       <section class="section3">
         <h3 class="fade-in fade1">Únete<br>a<br>nosotros</h3>
         <p class="fade-in fade2">
-          Muchos músicos alrededor del mundo <em>iniciaron su camino con&nbsp;nosotros</em>
+          Numerosos violinistas de todo el mundo empezaron su viaje musical con nosotros. Únete a nuestra comunidad de músicos y deja que te ayudemos a alcanzar tus sueños de tocar el violín. ¡Te esperamos con los brazos abiertos!
         </p>
         <div class="imagen2">
           <img src="../assets/img/violin/3.webp" alt="violinista global" loading="lazy" class="fade-in fade3" width="501" height="500">
@@ -137,7 +137,7 @@
         </h3>
         <div class="overlay imagen3">
         <img src="../assets/img/profesores/s3.webp" alt="profesora de violín" loading="lazy" width="432">
-        <p class="name">Sandra Kruwiz</p>
+        <p class="name">Profesora<br>Sandra Kruwiz</p>
         </div>
       </section>
     </div>
