--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                   <div class="overlay col-lg-12 col-sm-6">
                     <img class="card-img-top mb-3" src="assets/img/profesores/s1.webp"
                       alt="Card image cap profesora de piano" loading="lazy" width="432">
-                        <p class="name">Laura Torres</p>
+                        <p class="name">Profesora<br>Laura Torres</p>
                   </div>
                   <div class="col-lg-12 col-sm-12 mb-3">
                     <p class="card-text">Con años de experiencia y un amor inquebrantable por la música, guía a sus
@@ -183,7 +183,7 @@
                   <div class="overlay col-lg-12 col-sm-6">
                     <img class="card-img-top mb-3" src="assets/img/profesores/s2.webp"
                       alt="Card image cap profesora de violin" loading="lazy" width="432">
-                      <p class="name">Andrea Veliz</p>
+                      <p class="name">Profesora<br>Andrea Veliz</p>
                   </div>
                   <div class="col-lg-12 col-sm-12 mb-3">
                     <p class="card-text">Con su calidez y experiencia, ayuda a sus estudiantes a descubrir todo
@@ -204,7 +204,7 @@
                   <div class="overlay col-lg-12 col-sm-6">
                     <img class="card-img-top mb-3" src="assets/img/profesores/s3.webp"
                       alt="Card image cap profesora de canto" loading="lazy" width="432">
-                      <p class="name">Sandra Kruwiz</p>
+                      <p class="name">Profesora<br>Sandra Kruwiz</p>
                   </div>
                   <div class="col-lg-12 col-sm-12 mb-3">
                     <p class="card-text">Con su gracia y amabilidad, despierta la pasión por la música en sus
