--- a/pages/piano.html
+++ b/pages/piano.html
@@ -102,7 +102,7 @@
       <section class="section1">
         <h1 class="fade-in fade1">Aprende<br>Piano</h1>
         <p class="fade-in fade2">
-          Nuestras clases son <em>adaptadas e individuales</em>, garantizando mayor atención y&nbsp;progreso.
+          Nuestras clases de piano son completamente adaptadas e individuales, garantizando una mayor atención personalizada y un progreso significativo. Enfocamos nuestra enseñanza en la técnica de las manos y el uso correcto de los dedos, asegurando una base sólida y habilidades avanzadas.
         </p>
         <div class="imagen1">
           <img src="../assets/img/piano/1.webp" alt="teclas de piano" class="fade-in fade3" width="600" height="400">
@@ -111,7 +111,7 @@
       <section class="section2">
         <h2 class="fade-in fade1">Adultos<br>Niños</h2>
         <p class="fade-in fade2">
-          Apto para todas las edades y niveles.<br>Anímate y reserva tu clase para&nbsp;conocernos.
+          Apto para todas las edades y niveles, desde principiantes hasta avanzados. No importa tu edad, siempre es un buen momento para empezar o mejorar tus habilidades en el piano. Aprenderás a desarrollar una técnica correcta que facilitará tu interpretación musical.
         </p>
         <div class="imagen2">
           <img src="../assets/img/piano/2.webp" alt="adultos y niños tocando piano" class="fade-in fade3" width="501" height="500">
@@ -120,7 +120,7 @@
       <section class="section3">
         <h3 class="fade-in fade1">Únete<br>a<br>nosotros</h3>
         <p class="fade-in fade2">
-          Muchos músicos alrededor del mundo <em>iniciaron su camino con&nbsp;nosotros</em>
+          Muchos pianistas alrededor del mundo iniciaron su camino con nosotros. Únete a nuestra comunidad de pianistas y comienza tu viaje musical hoy mismo. ¡Te esperamos con entusiasmo!
         </p>
         <div class="imagen3">
           <img src="../assets/img/piano/3.webp" alt="pianista global" loading="lazy" class="fade-in fade3" width="501" height="500">
@@ -137,7 +137,7 @@
         </h3>
         <div class="overlay imagen3">
         <img src="../assets/img/profesores/s1.webp" alt="profesora de piano" loading="lazy" width="432">
-        <p class="name">Laura Torres</p>
+        <p class="name">Profesora<br>Laura Torres</p>
         </div>
       </section>
     </div>
