actualizo atributo alt en imagenes  top-section

--- a/pages/canto.html
+++ b/pages/canto.html
@@ -75,13 +75,13 @@
       <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../assets/img/top-section/canto1.webp" class="d-block w-100" alt="imagen artística de un violin sobre una partitura con una flor" width="1200" height="800">
+            <img src="../assets/img/top-section/canto1.webp" class="d-block w-100" alt="plano artístico a cantante" width="1200" height="800">
           </div>
           <div class="carousel-item">
-            <img src="../assets/img/top-section/canto2.webp" class="d-block w-100" alt="imagen artística de las teclas de un piano" width="1200" height="800">
+            <img src="../assets/img/top-section/canto2.webp" class="d-block w-100" alt="joven cantando en un estudio" width="1200" height="800">
           </div>
           <div class="carousel-item">
-            <img src="../assets/img/top-section/canto3.webp" class="d-block w-100" alt="imagen artística de dos micrófonos apoyados en el suelo" width="1200" height="800" loading="lazy">
+            <img src="../assets/img/top-section/canto3.webp" class="d-block w-100" alt="cantante mirando al público" width="1200" height="800" loading="lazy">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
